welcome.lessons.welcome.array.island.Island.scala.error
island:4: error: illegal start of simple expression
  var x = 0
  ^